[fixed] 2px row visible on the bottom in editmode

--- a/css/app.css
+++ b/css/app.css
@@ -164,8 +164,11 @@ html, body {position: relative}
 
 .appengine-blending
 {
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: rgba(0,0,0,0.5);
     z-index: -250;
 }
